--- a/style.css
+++ b/style.css
@@ -32,13 +32,13 @@ header {
     /* margin : 0 10%; */
 }
 .logo img{
-    height: 6vw; /* Adjust the size as needed */
+    width: 15vw; /* Adjust the size as needed */
     margin-left: 5vw;
  }
 .nav-links {
     list-style: none;
     display: flex; 
-  gap: 4vw;
+  gap: 4.5vw;
 }
 /* Giving styling to navigation links */
 .nav-links a{
@@ -48,18 +48,18 @@ header {
 }
 /* on hover change in navigation links */
 .nav-links a:hover{
-    font-size:1.7vw;
+    font-size:1.4vw;
     text-shadow: 1vw 1vw 2vw rgba(223, 216, 216, 0.726);
 }
 /* Subscribe button */
 .btn {
-    padding: 1vw 2.5vw;
+    padding: 1vw 1.5vw;
     color: #fff;
     border: none;
     border-radius: 10px;
     background: var(--text-and-support, #35A29F);
     cursor: pointer;
-    font-size: 1.6vw;
+    font-size: 1.2vw;
     margin-right: 5vw;
 }
 /* Text on image */
@@ -67,60 +67,60 @@ header {
     position:absolute;
     top:26%;
     left:4%;
-    font-size:4vw;
+    font-size:3vw;
     font-weight: 800;
   }
   /* Text on image */
   .saturn1{
     position:absolute;
-    top:33%;
+    top:31%;
     left:9%;
-    font-size: 4vw;
+    font-size: 3vw;
     font-weight: 800;
   }
   /* text on image */
   .gate{
     text-align: center;
 position:absolute;
-top:42%;
-left:12%;
+top:37%;
+left:8%;
 font-size:1.2vw;
   }
 
   /* Styling for the icon1 */
 .icon1 {
-    width:12%; 
+    width:10%; 
     position: absolute;
-    top:46%;
-    left:10%;
+    top:42%;
+    left:7%;
     z-index: 1;
 }
 
   /* Styling for the content1 */
 .content1 {
     position: absolute;
-    top: 47.5%;
-    left: 11.5%;
-  font-size: 1.4vw;
+    top: 43.5%;
+    left: 8.5%;
+  font-size: 1.2vw;
   z-index: 2;
     color: #fff;
 }
 /* Styling for icon 2 */
 .icon2 {
-    width:12%; 
+    width:10%; 
     position: absolute;
-    top:46%;
-    left:25%;
+    top:42%;
+    left:20%;
     z-index: 1;
 }
   /* Styling for the content2 */
 .content2 {
     position: absolute;
-    top: 47.5%;
-    left: 26.5%;
+    top: 43.5%;
+    left: 21.5%;
     z-index: 2;
     color: #fff;
-    font-size: 1.4vw;
+    font-size: 1.2vw;
 }
 /* Explore moons closely */
 .explore-container{
@@ -136,10 +136,10 @@ font-size:1.2vw;
 /* Styling About Saturn Edge */
 .about{
     text-align: center;
-    font-size:3.5vw;
+    font-size:3vw;
     font-weight: 900;
     color:white;
-    padding-top:8%;
+    padding-top:6%;
     margin-bottom: 0;
 }
 /* Changing the color of text to Blue */
@@ -150,21 +150,23 @@ font-size:1.2vw;
 .about-saturn{
   color:white;
   text-align: center;
-  font-size: 1.5vw;
-  padding:0 15%;
+  font-size: 1.3177vw;
+  font-weight: 400;
+  line-height: 197.111%;
+  padding:0 18%;
 }
 /* Saturn Services */
 .service{
   display: flex;
   /* Vertically center items */
-  justify-content: space-around;
-  padding: 5%;
+  justify-content: space-between;
+  padding: 4.8vw;
 }
 
 .text {
   color: var(--supportive, #FFF);
   font-family: Martel Sans;
-  font-size: 3.5vw;
+  font-size: 3vw;
   font-weight: 800;
   margin-bottom: 0;
   line-height:4.8vw;
@@ -172,59 +174,67 @@ font-size:1.2vw;
 }
 /* image of services */
 .service-image {
-  width:33%;
+  width:40%;
 }
 /* Choose Moon text */
 .choose-moon{
   text-align: center;
-    font-size:3.5vw;
+    font-size:3vw;
     font-weight: 900;
     color:white;
-    padding:10% 20%;
+    padding:8% 20%;
     padding-bottom: 0;
     line-height:5vw;
 }
 .Boxes{
   display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 3.8vw;
     flex-wrap: wrap;
 }
 /* black box for different types of moons */
 .box{
-   width: 35vw; /* Adjust the width as needed */
-    height:30vw;
-    background-color: black;
-    box-sizing: border-box;
+   width: 44vw; /* Adjust the width as needed */
+    height:20vw;
+    background-color: rgba(0, 0, 0, 0.911);
+    /* box-sizing: border-box; */
     margin:1vw;
     position: relative;
 }
 /* Images of Moon */
 .moon{
-  width:50%;
+  width:30%;
   position: absolute;
-  top:15%;
-  left:5%;
+  top:14%;
+  left:10%;
 }
 .upcoming{
- width:100%;
- height: 100%;
+height:100%;
+width:100%;
 }
 /* Text next to Moon images */
 .box p{
   position: absolute;
-  left:60%;
-  top:20%;
+  left:46%;
   font-family: Martel Sans;
   font-weight: 800;
-  font-size: 3vw;
+  font-size: 3.5vw;
   color:white;
+}
+.box .below-moon{
+  position:absolute;
+  top:36%;
+  left:46%;
+  font-weight: 100;
+  font-size:3vw;
+  font-family: Martel Sans;
 }
 .fantasy-moon{
   text-align: center;
-  font-size:3.5vw;
+  font-size:3vw;
   font-weight: 900;
   color:white;
-  padding-top:8%;
+  padding-top:6%;
   margin-bottom: 0;
 }
 .slide-moons{
@@ -245,6 +255,31 @@ footer{
   display: inline-block;
   height: 7vw;
 }
+.general li,.faq li{
+  margin: 0;
+  padding: 0;
+  line-height: 1.3vw;
+ }
+/* General Section */
+.general{
+  display: inline;
+list-style: none;
+color:white;
+float:right;
+/* overflow: hidden; */
+}
+.general span{
+  font-weight: 800;
+  font-size:1.2vw;
+}
+.general a{
+  text-decoration: none;
+  color:white;
+  font-size:1.1vw;
+  margin:0;
+  padding: 0;
+  /* line-height: 1.2vw; */
+}
 /* FAQ Section */
 .faq{
   display: inline;
@@ -262,28 +297,4 @@ font-size:1.2vw;
   /* line-height: 1vw; */
   text-decoration: none;
 }
-/* General Section */
-.general{
-  display: inline;
-list-style: none;
-color:white;
-float:right;
-overflow: hidden;
-}
-.general span{
-  font-weight: 800;
-  font-size:1.2vw;
-}
-.general a{
-  text-decoration: none;
-  color:white;
-  font-size:1.1vw;
-  margin:0;
-  padding: 0;
-  /* line-height: 1.2vw; */
-}
-.general li,.faq li{
- margin: 0;
- padding: 0;
- line-height: 1.3vw;
-}
+
