--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ font-size:1.2vw;
 .text p{
   line-height:2vw;
   color:white;
-  font-size:1vw;
+  font-size:1.2vw;
   text-align: left;
   font-weight: 100;
   padding-right: 4vw;
@@ -192,7 +192,7 @@ font-size:1.2vw;
 }
 /* image of services */
 .service-image {
-  width:50vw;
+  width:50%;
 }
 /* Choose Moon text */
 .choose-moon{
