--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ font-size:1.2vw;
   line-height:4.8vw;
 
 }
-.imagination{
+.text .imagination{
   font-size:1.2vw;
   font-style: italic;
   /* padding-right: 4vw; */
