--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ font-size:1.2vw;
   line-height:4.8vw;
 
 }
-.text .imagination{
+.imagination{
   font-size:1.2vw;
   font-style: italic;
   /* padding-right: 4vw; */
@@ -186,8 +186,11 @@ font-size:1.2vw;
   font-weight: 100;
   padding-right: 4vw;
 }
+.text .join-us{
+  font-size: 1.2vw;
+}
 .text .solutions{
-  font-weight: 800;
+  font-size: 1.2vw;
   /* text-align: center; */
 }
 /* image of services */
@@ -284,6 +287,7 @@ footer{
 list-style: none;
 color:white;
 float:right;
+/* overflow: hidden; */
 }
 .general span{
   font-weight: 800;
@@ -295,6 +299,7 @@ float:right;
   font-size:1.1vw;
   margin:0;
   padding: 0;
+  /* line-height: 1.2vw; */
 }
 /* FAQ Section */
 .faq{
