--- a/style.css
+++ b/style.css
@@ -181,16 +181,17 @@ font-size:1.2vw;
 .text p{
   line-height:2vw;
   color:white;
-  font-size:1.2vw;
+  font-size:1.5vw;
   text-align: left;
   font-weight: 100;
   padding-right: 4vw;
 }
 .text .join-us{
-  font-size: 1.2vw;
+  font-size: 1.5vw;
 }
 .text .solutions{
-  font-size: 1.2vw;
+  font-size: 1.5vw;
+  font-weight:700;
   /* text-align: center; */
 }
 /* image of services */
