--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     font-family:Martel Sans;
     width:100vw;
     height:100vh;
+    color:white;
 }
 /* for image of saturn as background  */
 .container {
@@ -192,7 +193,6 @@ font-size:1.2vw;
 .text .solutions{
   font-size: 1.5vw;
   font-weight:700;
-  /* text-align: center; */
 }
 /* image of services */
 .service-image {
@@ -243,6 +243,14 @@ width:100%;
   font-size: 3.5vw;
   color:white;
 }
+.box .logo{
+  position:absolute;
+  bottom: 5%;
+  /* left:100%; */
+  right:5%;
+  height:2.5vw;
+}
+
 .box .below-moon{
   position:absolute;
   top:36%;
@@ -319,4 +327,11 @@ font-size:1.2vw;
   /* line-height: 1vw; */
   text-decoration: none;
 }
+.mail{
+  text-align:center;
+background-color: rgba(5, 1, 19, 0.452);
+  padding:10px;
+font-size: 1.2vw;
+}
+
 
